--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -43,6 +43,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -222,6 +223,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/sb_size_12"
+                    android:paddingHorizontal="@dimen/sb_size_4"
                     android:clipToPadding="false"
                     android:paddingBottom="@dimen/sb_size_30"
                     app:layout_constraintTop_toBottomOf="@id/ll_Offer2" />
