--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -3,16 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clProductRootView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingVertical="@dimen/sb_size_6">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvDummy"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sb_size_6"
-        app:cardCornerRadius="@dimen/sb_size_8"
+        app:cardCornerRadius="@dimen/sb_size_2"
         app:cardElevation="@dimen/sb_size_0"
+        android:layout_marginHorizontal="@dimen/sb_size_2"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,20 +22,24 @@
 
         <ImageView
             android:id="@+id/img_wishlist"
-            android:layout_width="120dp"
-            android:layout_height="165dp"
+            android:layout_width="match_parent"
+            android:layout_height="175dp"
+            android:scaleType="center"
             tools:src="@color/deep_orange_600" />
 
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/txt_wishlist_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/sb_size_8"
-        android:text="1234 $"
-        android:textColor="@color/grey_900"
-        android:textSize="@dimen/sb_text_size_15"
+        android:text="123 $"
+        android:paddingHorizontal="8dp"
+        android:maxLines="1"
+        android:textStyle="bold"
+        android:textColor="@color/blue_grey_700"
+        android:textSize="@dimen/sb_text_size_14"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/cvDummy"
         app:layout_constraintStart_toStartOf="@id/cvDummy"
