Added the mostPopular filter

--- a/app/src/main/res/layout/activity_all_product_category.xml
+++ b/app/src/main/res/layout/activity_all_product_category.xml
@@ -256,7 +256,8 @@
                     android:layout_height="0dp"
                     android:background="@color/white"
                     android:clipToPadding="false"
-                    android:paddingVertical="@dimen/sb_size_8"
+                    android:paddingTop="@dimen/sb_size_8"
+                    android:paddingBottom="@dimen/sb_size_30"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:layout_constraintBottom_toTopOf="@id/llFilterParentLayout"
                     app:layout_constraintEnd_toEndOf="parent"
