--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,15 +24,17 @@
         android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:layout_marginTop="?attr/actionBarSize"
         android:visibility="gone" />
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
+<!--        android:id="@+id/swipeRefreshLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
 
         <RelativeLayout
+            android:id="@+id/hideRelative"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -273,24 +276,54 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/relativeLayout2"
-                                android:layout_marginTop="@dimen/sb_size_10"
+                                android:layout_marginTop="10dp"
                                 android:background="@color/white"
-                                android:orientation="horizontal"
+                                android:orientation="vertical"
                                 android:padding="@dimen/sb_size_20">
 
                                 <TextView
-                                    android:layout_width="wrap_content"
+                                    android:id="@+id/textViewDesc"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="Description"
+                                    android:gravity="start|center"
                                     android:textColor="@color/black"
-                                    android:textSize="@dimen/sb_text_size_17" />
+                                    android:textSize="@dimen/sb_text_size_17"
+                                    app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_up_24" />
 
-                                <!--                            <TextView-->
-                                <!--                                android:layout_width="wrap_content"-->
-                                <!--                                android:layout_height="wrap_content"-->
-                                <!--                                android:layout_marginStart="@dimen/sb_size_10"-->
-                                <!--                                android:text="Description"-->
-                                <!--                                android:textColor="@color/black" />-->
+                                <LinearLayout
+                                    android:id="@+id/linearLayoutDescription"
+                                    android:orientation="vertical"
+                                    android:layout_width="match_parent"
+                                    android:visibility="gone"
+                                    android:layout_marginTop="@dimen/sb_size_5"
+                                    android:layout_height="wrap_content">
+
+                                    <TextView
+                                        android:id="@+id/description"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="@dimen/sb_size_15"
+                                        android:textColor="@color/black"
+                                        android:textSize="@dimen/sb_text_size_16"
+                                        android:padding="@dimen/sb_size_20"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toBottomOf="@+id/verifyTextView"/>
+
+                                    <androidx.recyclerview.widget.RecyclerView
+                                        android:id="@+id/recyclerViewDescription"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:paddingVertical="@dimen/sb_size_10"
+                                        android:layout_marginTop="@dimen/sb_size_10"
+                                        android:paddingHorizontal="@dimen/sb_size_10"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toBottomOf="@+id/description" />
+
+                                </LinearLayout>
 
                             </LinearLayout>
 
@@ -308,10 +341,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/gothambold"
-                                    android:text="Reviews(3238)"
+                                    android:text="Reviews"
                                     android:textColor="@color/black"
                                     android:textStyle="bold" />
-
 
                                 <androidx.cardview.widget.CardView
                                     android:id="@+id/cardView"
@@ -584,61 +616,18 @@
                                     android:textColor="@color/black"
                                     android:textStyle="bold" />
 
-                                <LinearLayout
+                                <androidx.recyclerview.widget.RecyclerView
+                                    android:id="@+id/randomRecyclerView"
                                     android:layout_width="match_parent"
+                                    android:nestedScrollingEnabled="false"
+                                    android:layout_height="match_parent"/>
+
+                                <ProgressBar
+                                    android:id="@+id/progressBar"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <ImageView
-                                        android:id="@+id/imageView2"
-                                        android:layout_width="0dp"
-                                        android:layout_height="150dp"
-                                        android:layout_weight="1"
-                                        android:src="@drawable/demo" />
-
-                                    <ImageView
-                                        android:id="@+id/imageView3"
-                                        android:layout_width="0dp"
-                                        android:layout_height="150dp"
-                                        android:layout_weight="1"
-                                        android:src="@drawable/demo" />
-
-                                    <ImageView
-                                        android:id="@+id/imageView4"
-                                        android:layout_width="0dp"
-                                        android:layout_height="150dp"
-                                        android:layout_weight="1"
-                                        android:src="@drawable/demo" />
-
-                                </LinearLayout>
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <ImageView
-                                        android:id="@+id/imageView5"
-                                        android:layout_width="0dp"
-                                        android:layout_height="150dp"
-                                        android:layout_weight="1"
-                                        android:src="@drawable/demo" />
-
-                                    <ImageView
-                                        android:id="@+id/imageView6"
-                                        android:layout_width="0dp"
-                                        android:layout_height="150dp"
-                                        android:layout_weight="1"
-                                        android:src="@drawable/demo" />
-
-                                    <ImageView
-                                        android:id="@+id/imageView7"
-                                        android:layout_width="0dp"
-                                        android:layout_height="150dp"
-                                        android:layout_weight="1"
-                                        android:src="@drawable/demo" />
-
-                                </LinearLayout>
+                                    android:layout_gravity="center_horizontal"
+                                    android:visibility="gone"/>
 
                             </LinearLayout>
 
@@ -660,7 +649,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </RelativeLayout>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
 
     <LinearLayout
         android:id="@+id/fav_layout"
