--- a/app/src/main/res/layout/layout_recyclerview_size_button.xml
+++ b/app/src/main/res/layout/layout_recyclerview_size_button.xml
@@ -9,16 +9,17 @@
     <Button
         android:id="@+id/colorButton"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:layout_alignParentEnd="true"
         android:background="@drawable/rect_back_button"
-        android:paddingHorizontal="@dimen/sb_size_6"
+
         android:text="Red"
-        android:textSize="12sp"
+        android:textSize="8sp"
         android:clickable="true"
         android:focusable="true"
-        android:layout_marginEnd="@dimen/sb_size_8"
+        android:layout_marginEnd="@dimen/sb_size_10"
         android:textStyle="bold"
+        android:fontFamily="@font/gothamblack"
         android:textColor="@color/black"
         android:padding="@dimen/sb_size_2"
         app:layout_constraintBottom_toBottomOf="parent"
