--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".activities.LoginActivity">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -47,7 +48,7 @@
                             android:layout_width="120dp"
                             android:layout_height="120dp"
                             android:contentDescription="logo"
-                            android:src="@color/grey_400" />
+                            android:src="@drawable/ic_bloom" />
                     </androidx.cardview.widget.CardView>
 
                     <com.google.android.material.textfield.TextInputLayout
