--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,7 +55,7 @@
                             android:layout_width="120dp"
                             android:layout_height="120dp"
                             android:contentDescription="logo"
-                            android:src="@color/grey_400" />
+                            android:src="@drawable/ic_bloom" />
                     </androidx.cardview.widget.CardView>
 
                     <com.google.android.material.textfield.TextInputLayout
