--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -38,10 +38,10 @@
             android:background="@color/grey_200"
             android:ems="10"
             android:hint="@string/search_here"
-            android:imeOptions="actionDone"
-            android:inputType="textPersonName"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
             android:maxLines="1"
-            android:paddingStart="@dimen/sb_size_14" />
+            android:paddingStart="@dimen/sb_size_12" />
 
         <TextView
             android:id="@+id/txt_search"
@@ -86,9 +86,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:spanCount="2"
-                tools:listitem="@layout/item_searched_product" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ViewStub
                 android:id="@+id/new_fragment_no_connection_layout"
@@ -97,6 +95,19 @@
                 android:elevation="@dimen/sb_size_1"
                 android:layout="@layout/no_internet_connected"
                 android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/txt_empty"
+                style="@style/BoldText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="No Matching Results Found"
+                android:textSize="@dimen/sb_text_size_18"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@+id/search_recycler_view"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
