--- a/app/src/main/res/layout/item_searched_product.xml
+++ b/app/src/main/res/layout/item_searched_product.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/search_product_image"
@@ -11,7 +12,7 @@
         android:layout_marginHorizontal="@dimen/sb_size_4"
         android:layout_marginVertical="@dimen/sb_size_4"
         android:background="@color/blue_grey_900"
-        android:contentDescription="search product"
+        android:contentDescription="@string/search_product"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,12 +20,12 @@
 
     <TextView
         android:id="@+id/searched_product_name"
-        style="@style/NormalText"
+        style="@style/MediumText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/sb_size_12"
         android:fontFamily="@font/gothamblack"
-        android:text="₹ 1000"
+        tools:text="₹ 1000"
         android:textColor="@color/blue_grey_900"
         android:textSize="@dimen/sb_text_size_16"
         android:textStyle="bold"
