--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,6 +7,18 @@
     tools:context=".activities.search.SearchActivity">
 
     <LinearLayout
+        android:id="@+id/top_search_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/sb_size_8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view5">
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -103,7 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="No Matching Results Found"
-                android:textSize="@dimen/sb_text_size_18"
+                android:textSize="@dimen/sb_text_size_16"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/search_recycler_view"
                 app:layout_constraintStart_toStartOf="parent"
