--- a/app/src/main/res/layout/no_internet_connected.xml
+++ b/app/src/main/res/layout/no_internet_connected.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:clickable="true"
-    android:focusable="true"
-    android:id="@+id/constraintLayout"
     android:elevation="@dimen/sb_size_10"
-    android:background="@color/white">
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/imgNoInternet"
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginTop="124dp"
-        app:srcCompat="@drawable/ic_no_internet"
         android:contentDescription="@string/no_internet_connected"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_no_internet" />
 
     <TextView
         android:id="@+id/tvNoInternetConnection"
@@ -38,6 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/sb_size_6"
+        android:foreground="?attr/selectableItemBackground"
+        android:padding="@dimen/sb_size_8"
         android:text="@string/hint_swipe_to_refresh"
         android:textColor="@color/blue_grey_900"
         android:textSize="@dimen/sb_text_size_16"
