--- a/app/src/main/res/layout/activity_shopping_bag.xml
+++ b/app/src/main/res/layout/activity_shopping_bag.xml
@@ -50,7 +50,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/tvCartPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/sb_size_16"
