--- a/app/src/main/res/layout/activity_shopping_bag.xml
+++ b/app/src/main/res/layout/activity_shopping_bag.xml
@@ -28,16 +28,28 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:listitem="@layout/item_shopping_bag" />
 
-    <ProgressBar
-        android:id="@+id/progressBar5"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:visibility="invisible"
+    <RelativeLayout
+        android:id="@+id/rlProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/transparent_shade"
+        android:elevation="@dimen/sb_size_6"
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true"
+        tools:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:elevation="@dimen/sb_size_6"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clBillDetails"
@@ -50,16 +62,29 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:id="@+id/tvCartPrice"
+            android:id="@+id/tvDummyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/sb_size_16"
+            android:layout_marginVertical="@dimen/sb_size_6"
+            android:text="Total cart value"
+            android:textColor="@color/grey_800"
+            android:textSize="@dimen/sb_size_16"
+            app:layout_constraintBottom_toTopOf="@+id/btCheckOut"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvCartPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/sb_size_16"
             android:layout_marginVertical="@dimen/sb_size_6"
             android:text="$ 500"
             android:textColor="@color/black"
             android:textSize="@dimen/sb_size_16"
             app:layout_constraintBottom_toTopOf="@+id/btCheckOut"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
