added checked when no color and size

--- a/app/src/main/res/layout/layout_recyclerview_color_button.xml
+++ b/app/src/main/res/layout/layout_recyclerview_color_button.xml
@@ -33,8 +33,7 @@
             android:id="@+id/colorButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:button="@null"
-            android:background="@color/black"/>
+            android:button="@null"/>
         </androidx.cardview.widget.CardView>
 
     </androidx.cardview.widget.CardView>
