--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -143,16 +143,17 @@
                                 android:layout_marginStart="@dimen/sb_size_20"
                                 android:layout_marginTop="@dimen/sb_size_13"
                                 android:orientation="horizontal">
+
                                 <TextView
                                     android:id="@+id/salePrice"
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
-                                    android:fontFamily="@font/gothambold"
-                                    android:textColor="@color/black"
                                     android:layout_marginEnd="@dimen/sb_size_20"
+                                    android:fontFamily="@font/gothambold"
+                                    android:text="sdsdsdsd"
+                                    android:textColor="@color/black"
                                     android:textSize="@dimen/sb_text_size_17"
                                     android:textStyle="bold"
-                                    android:text="sdsdsdsd"
                                     android:visibility="gone" />
 
                                 <TextView
@@ -160,8 +161,8 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
                                     android:fontFamily="@font/gothambold"
-                                    android:text="sdsdsd"
                                     android:gravity="center|start"
+                                    android:text="sdsdsd"
                                     android:textColor="@color/black"
                                     android:textSize="@dimen/sb_text_size_14"
                                     android:textStyle="bold" />
@@ -176,7 +177,6 @@
                                     android:textSize="@dimen/sb_text_size_15"
                                     android:visibility="gone" />
                             </LinearLayout>
-
 
 
                             <RatingBar
@@ -216,7 +216,8 @@
                                 android:layout_marginHorizontal="@dimen/sb_size_20"
                                 android:layout_marginTop="@dimen/sb_size_10"
                                 android:nestedScrollingEnabled="false"
-                                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                                tools:visibility="gone" />
 
                             <TextView
                                 android:id="@+id/sizeTextView"
@@ -240,11 +241,12 @@
                                 android:layout_marginTop="11dp"
                                 android:layout_marginBottom="@dimen/sb_size_15"
                                 android:nestedScrollingEnabled="false"
-                                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                                tools:visibility="gone" />
 
                         </RelativeLayout>
 
-                        <RelativeLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/relativeLayout2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -256,48 +258,50 @@
                                 android:id="@+id/shippingToTextView"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/sb_size_10"
-                                android:layout_marginTop="@dimen/sb_size_15"
+                                android:layout_marginStart="@dimen/sb_size_18"
+                                android:layout_marginTop="@dimen/sb_size_18"
                                 android:fontFamily="@font/gothamblack"
-                                android:text="Shipping to"
-                                android:textColor="@color/black"
+                                android:text="Delivery Detail"
+                                android:textColor="@color/grey_800"
                                 android:textSize="@dimen/sb_text_size_16"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
 
                             <EditText
                                 android:id="@+id/pincodeEditText"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_marginHorizontal="@dimen/sb_size_10"
-                                android:layout_marginTop="@dimen/sb_size_5"
-                                android:layout_toStartOf="@+id/changePinCode"
-                                android:layout_toEndOf="@+id/shippingToTextView"
-                                android:gravity="start"
-                                android:hint="PINCODE"
-                                android:inputType="phone"
-                                android:maxLength="10"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginEnd="@dimen/sb_size_12"
+                                android:gravity="start|bottom"
+                                android:hint="@string/enter_pincode"
+                                android:inputType="number"
+                                android:maxLength="6"
                                 android:maxLines="1"
                                 android:textColor="@color/colorPrimaryDark"
-                                android:textSize="@dimen/sb_text_size_17"
-                                android:theme="@style/MyEditTextTheme" />
-
+                                android:textSize="@dimen/sb_text_size_16"
+                                android:theme="@style/MyEditTextTheme"
+                                app:layout_constraintEnd_toStartOf="@+id/changePinCode"
+                                app:layout_constraintStart_toStartOf="@id/shippingToTextView"
+                                app:layout_constraintTop_toBottomOf="@id/shippingToTextView" />
 
                             <Button
                                 android:id="@+id/changePinCode"
                                 android:layout_width="wrap_content"
-                                android:layout_height="@dimen/sb_size_30"
-                                android:layout_alignParentEnd="true"
-                                android:layout_marginTop="@dimen/sb_size_10"
-                                android:layout_marginEnd="@dimen/sb_size_10"
+                                android:layout_height="@dimen/sb_size_35"
+                                android:layout_marginEnd="@dimen/sb_size_18"
+                                android:background="@color/blue_grey_900"
                                 android:paddingHorizontal="@dimen/sb_size_10"
-                                android:text="Check"
+                                android:text="CHECK"
                                 android:textAllCaps="false"
-                                android:textStyle="bold"
-                                android:background="@color/black"
                                 android:textColor="@color/white"
-                                android:textSize="12sp" />
+                                android:textSize="@dimen/sb_text_size_14"
+                                android:textStyle="bold"
+                                app:layout_constraintBottom_toBottomOf="@+id/pincodeEditText"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/pincodeEditText" />
 
                             <!--                            <RelativeLayout-->
                             <!--                                android:id="@+id/changePinRelative"-->
@@ -401,43 +405,67 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@id/pincodeEditText"
-                                android:layout_marginStart="@dimen/sb_size_20"
-                                android:layout_marginTop="@dimen/sb_text_size_8"
-                                android:orientation="vertical">
+                                android:layout_marginTop="@dimen/sb_size_12"
+                                android:orientation="vertical"
+                                app:layout_constraintTop_toBottomOf="@+id/pincodeEditText">
 
-                                <TextView
-                                    android:id="@+id/deliverStatusTv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="@dimen/sb_size_2"
-                                    android:layout_marginBottom="@dimen/sb_size_4"
-                                    android:drawablePadding="@dimen/sb_size_10"
-                                    android:gravity="start|center"
-                                    android:padding="@dimen/sb_size_10"
-                                    android:text="Usually Delivered in 5 days"
-                                    android:textColor="@color/black"
-                                    app:drawableStartCompat="@drawable/ic_group_629" />
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:gravity="center_vertical"
+                                    android:orientation="horizontal"
+                                    android:paddingHorizontal="@dimen/sb_size_18">
 
+                                    <ImageView
+                                        android:layout_width="@dimen/sb_size_28"
+                                        android:layout_height="@dimen/sb_size_28"
+                                        android:layout_gravity="center_vertical"
+                                        android:src="@drawable/ic_group_629" />
+
+                                    <TextView
+                                        android:id="@+id/deliverStatusTv"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="start|center_vertical"
+                                        android:paddingHorizontal="@dimen/sb_size_18"
+                                        android:text="Usually Delivered in 5 days"
+                                        android:textColor="@color/black" />
+
+                                </LinearLayout>
 
                                 <View
                                     android:layout_width="match_parent"
                                     android:layout_height="1dp"
-                                    android:background="#EEEEEE" />
+                                    android:layout_marginHorizontal="@dimen/sb_size_18"
+                                    android:background="@color/grey_100" />
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="@dimen/sb_size_4"
-                                    android:drawablePadding="@dimen/sb_size_25"
-                                    android:gravity="start|center"
-                                    android:padding="@dimen/sb_size_20"
-                                    android:text="Return Policy"
-                                    android:textColor="@color/black"
-                                    app:drawableStartCompat="@drawable/ic_return_size" />
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:gravity="center_vertical"
+                                    android:orientation="horizontal"
+                                    android:paddingHorizontal="@dimen/sb_size_18">
+
+                                    <ImageView
+                                        android:layout_width="@dimen/sb_size_28"
+                                        android:layout_height="@dimen/sb_size_28"
+                                        android:layout_gravity="center_vertical"
+                                        android:src="@drawable/ic_returns" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center_vertical|start"
+                                        android:paddingHorizontal="@dimen/sb_size_18"
+                                        android:text="@string/return_policy"
+                                        android:textColor="@color/black" />
+
+                                </LinearLayout>
+
+
                             </LinearLayout>
 
-                        </RelativeLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
 
                         <LinearLayout
                             android:id="@+id/linearLayout"
