--- a/app/src/main/res/menu/profile_fragment_menu.xml
+++ b/app/src/main/res/menu/profile_fragment_menu.xml
@@ -9,7 +9,7 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/menu_cart"
+        android:id="@+id/action_cart"
         android:icon="@drawable/ic_cart"
         android:title="Bag"
         app:showAsAction="always" />
