Added intent Flag

--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -292,11 +292,11 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="@dimen/sb_size_35"
                                 android:layout_marginEnd="@dimen/sb_size_18"
-                                android:background="@color/blue_grey_900"
+                                android:background="@drawable/rect_back_button"
                                 android:paddingHorizontal="@dimen/sb_size_10"
                                 android:text="CHECK"
                                 android:textAllCaps="false"
-                                android:textColor="@color/white"
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/sb_text_size_14"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="@+id/pincodeEditText"
