--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -119,4 +119,8 @@
         <item name="android:windowEnterAnimation">@anim/dialoganimation</item>
     </style>
 
+    <style name="ProgressBarTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">@color/progress_bar_color</item>
+    </style>
+
 </resources>
